sreeshanth(translation changes)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1113 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -71,8 +71,8 @@
     <% FedenaPlugin::ADDITIONAL_LINKS[:online_exam_index_link].each do |mod| %>
   <%#  if permitted_to? :index,:online_exam %>
       <div class="link-box">
-        <div class="link-heading"><%= link_to "#{mod[:title]}",mod[:destination] %></div>
-        <div class="link-descr"><%= t("mod[:description]") %></div>
+        <div class="link-heading"><%= link_to "#{t("#{mod[:title]}")}",mod[:destination] %></div>
+        <div class="link-descr"><%= "#{t("#{mod[:description]}")}" %></div>
       <% end %>
 <%# end %>
     </div>
