added student dependecy check for plugins
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1114 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/change_to_former.erb
+++ b/app/views/student/change_to_former.erb
@@ -35,24 +35,28 @@
   </div>
 
   <div class="extender"> </div>
+  <% if @has_dependency %>
+    <% @dependency.each do |k,v| %>
+     <%= render :partial=>k.classify.constantize.send("student_dependency_hook") %>
+  <% end %>
+  <% else %>
+    <div id="remove-student">
+      <% unless flash[:notice].nil? %> <p class="flash-msg"> <%= flash[:notice] %> </p> <% end %>
+      <p><%= t('description_for_students_leaving') %></p>
 
-  <div id="remove-student">
-    <% unless flash[:notice].nil? %> <p class="flash-msg"> <%= flash[:notice] %> </p> <% end %>
-    <p><%= t('description_for_students_leaving') %></p>
+      <% remote_form_for :remove do |f| %>
+        <div class="label-field-pair">
+          <label for="remove_descr"><%= t('reason_for_leaving') %></label>
+          <div class="text-input-bg"><%= f.text_field :status_description %></div>
+        </div>
 
-    <% remote_form_for :remove do |f| %>
-      <div class="label-field-pair">
-        <label for="remove_descr"><%= t('reason_for_leaving') %></label>
-        <div class="text-input-bg"><%= f.text_field :status_description %></div>
-      </div>
+        <div id="submit-button">
+          <%= submit_tag "► #{t('delete_text')}" %>
+        </div>
 
-      <div id="submit-button">
-        <%= submit_tag "► #{t('delete_text')}" %>
-      </div>
-
-    <% end %>
-  </div><br />
-  <br/>
-  <div id="tc-generate"></div>
-
+      <% end %>
+    </div><br />
+    <br/>
+    <div id="tc-generate"></div>
+  <% end %>
 </div>
