--- a/public/stylesheets/student/change_to_former.css
+++ b/public/stylesheets/student/change_to_former.css
@@ -90,3 +90,80 @@
 .user_button:hover{
     background:  #373B3F;
 }
+
+#category-list {
+    clear : both;
+    padding : 10px 0 40px 0px;
+    width:600px;
+    margin:0px auto;
+}
+#category-list .listheading{
+       background : #BECFFB;
+    border-bottom: 2px solid #BECFFB;
+    color : #444;
+    height : 1.5em;
+    list-style-type : none;
+    padding : 0.5em 0 0 3em;
+    width:32em;
+}
+
+#category-list .listeven{
+    background : #EEF2FD;
+    border-bottom:1px solid #BECFFB;
+    color : #444;
+    height : 1.5em; width : 30em;
+    list-style-type : none;
+    padding : 0.5em 0 0 5em;
+}
+
+#category-list .listodd{
+    background : #DFEAFF;
+    border-bottom:1px solid #BECFFB;
+    color : #444;
+    height : 1.5em; width : 30em;
+    list-style-type : none;
+    padding : 0.5em 0 0 5em;
+}
+
+#category-list li.heading {
+    background : none;
+    font-weight : bold;
+    list-style-type : none;
+    color : #444;
+    height : 1.5em; width : 30em;
+    padding : 0.5em 0 0 5em;
+}
+#category-list li div {
+    float : left;
+}
+
+.heading-no {
+font-size:13px;
+font-weight:bold;
+width:204px;
+}
+#category-list li div.category-name {
+    width : 250px;
+    font-weight: bold;
+    font-size:13px;
+}
+#category-list li div.category-number {
+    width : 173px;
+    font-weight: bold;
+    font-size:13px;
+}
+#category-list li div.category-edit,
+#category-list li div.category-delete {
+    font-size : 0.9em;
+    width : 50px;
+
+}
+#category-list li div a {
+    color : #000;
+    font-size:14px;
+    text-decoration: none;
+}
+#category-list li div a:hover {
+    color : #d00;
+    text-decoration: underline;
+}
