feature => RTL conversion
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1115 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_employee/_general.erb
+++ b/app/views/archived_employee/_general.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 
-<div class="profile_top_banner"><%= image_tag "master_student/profile/topbanner.png" %></div>
+<div class="profile_top_banner"><%= image_tag("master_student/profile/topbanner.png") unless rtl? %></div>
 <div class="profile_info_label_top"><%= t('joining_date') %></div>
 <div class="profile_info_text_top"><%= I18n.l(@employee.joining_date, :format=>"%d %b,%Y")%></div>
 
