--- a/app/views/archived_student/guardians.erb
+++ b/app/views/archived_student/guardians.erb
@@ -63,7 +63,7 @@
 
       <a name="guardian-details-id-<%= p.id %>"> </a>
       <div id="new_profile_info_top">
-        <div class="profile_top_banner"><%= image_tag "master_student/profile/topbanner.png" %></div>
+        <div class="profile_top_banner"><%= image_tag("master_student/profile/topbanner.png") unless rtl? %></div>
         <div class="profile_info_label"><%= t('name') %></div>
         <div class="profile_info_text">
           <%= p.full_name %>
