fixed archived employee photo retain
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1118 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_employee/profile.erb
+++ b/app/views/archived_employee/profile.erb
@@ -77,8 +77,8 @@
   <div id="employee_profile_heading">
 
     <div id="profile_picture_display">
-      <% unless @employee.photo_data.blank? %>
-        <img src="<%= url_for(:controller=>"archived_employee", :action => "show", :id => @employee.id) %>"  />
+      <% if @employee.photo.file? %>
+       <%= image_tag @employee.photo.url %>
       <% else %>
         <%= image_tag "HR/default_employee.png" %>
       <% end %>
