bug fixed => { student attendance privileges not working } , fixes #1034
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1119 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student_attendance/index.html.erb
+++ b/app/views/student_attendance/index.html.erb
@@ -36,7 +36,7 @@
   <div id="box">
 
 
-      <% if permitted_to? :index, :attendances or @allow_access == true%>
+      <% if permitted_to? :index, :attendances and (@employee_subjects.present? or @privilege.include?(16) or @current_user.admin?) %>
         <div class="link-box">
           <div class="link-heading"><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></div>
           <div class="link-descr"><%= t('attendance_registered_for_students') %></div>
