bug fixed => { model box not hiding after creating automatic transaction } , fixes #1057
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1122 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/_transaction_trigger_create_form.html.erb
+++ b/app/views/finance/_transaction_trigger_create_form.html.erb
@@ -21,6 +21,7 @@
 
 <% form_remote_for :transaction_trigger,
     :url => {:action => 'transaction_trigger_create'} do |form| %>
+<div id="form-errors"></div>
 
 
    <div class="label-field-pair">
