--- a/app/views/exam/consolidated_exam_report.html.erb
+++ b/app/views/exam/consolidated_exam_report.html.erb
@@ -37,7 +37,7 @@
   <% end %>
 
   <div class="box">
-    <h4><%= @exam_group.batch.name %> | <%= @exam_group.name %></h4>
+    <h4><%= @exam_group.batch.course.full_name %> <%= @exam_group.batch.name %> | <%= @exam_group.name %></h4>
     <div class="students-table">
       <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
         <tr class="tr-head">
