--- a/app/views/exam/consolidated_exam_report_pdf.erb
+++ b/app/views/exam/consolidated_exam_report_pdf.erb
@@ -20,11 +20,12 @@
 
 <div id="page-yield">
   <div class="hor_line"></div>
+  <h2><%= @exam_group.batch.course.full_name %> <%= @exam_group.batch.name %> - <%= @exam_group.name %></h2>
+  <div class="hor_line"></div>
 
   <div class="extender"> </div>
   <div class="report">
     <div id ="main_info">
-      <h3><%= @exam_group.batch.name %> - <%= @exam_group.name %></h3>
       <h4><%= t('consolidated_report') %></h4>
     </div>
     <div id="pdf-info">
