[debanjan] placement module bug fixes
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1124 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/generated_report2.erb
+++ b/app/views/exam/generated_report2.erb
@@ -56,11 +56,11 @@
               <% exam_score = ExamScore.find_by_student_id(student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
               <% unless exam.nil? %>
                 <% if exam_group.exam_type == 'Marks' %>
-                  <%= exam_score.nil? ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
+                  <%= exam_score.nil? ? '-' : exam_score = ""  ? '-' : "#{exam_score.marks || "-"}/"+exam.maximum_marks.to_s %>
                 <% elsif exam_group.exam_type == 'Grades'%>
                   <%= exam_score.nil? ? '-' : (exam_score.grading_level || '-') %>
                 <% else %>
-                  <%= exam_score.nil? ? '-' :  "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
+                  <%= exam_score.nil? ? '-' : exam_score = ""  ? '-' + "[#{(exam_score.grading_level || "-")}]": "#{(exam_score.marks || "-")}" +"/"+exam.maximum_marks.to_s+"[#{(exam_score.grading_level || "-")}]" %>
                 <% end %>
               <% else %>
                 <%= "#{t('n_a')}" %>
