--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -248,7 +248,7 @@
       <div class="button-box">
         <%= link_to "<div class ='button-label'><p>#{t('finance_text')}</p></div>", {:controller => "finance", :action => "index"},
           :class => "option_buttons", :id => "finance_button", :title =>t('finance_link_title') %>
-      </div>notice
+      </div>
     <% end %>
 
   <% end %>
