--- a/app/views/exam_groups/show.html.erb
+++ b/app/views/exam_groups/show.html.erb
@@ -34,7 +34,8 @@
             :success => "Element.hide('loader')") %></li>
       <% end  %>
     <% end %>
-    <% if @current_user.admin? or @user_privileges.map{|p| p.name}.include?('ExaminationControl') or @user_privileges.map{|p| p.name}.include?('EnterResults') %>
+    <% user_allowed = (@current_user.admin? or @user_privileges.map{|p| p.name}.include?('ExaminationControl')) ? true : false %>
+    <% if user_allowed %>
       <%  if permitted_to? :new,:exams %>
         <li><%= link_to "#{t('new_text')}", new_exam_group_exam_path(@exam_group) %></li>
       <% end %>
@@ -56,7 +57,13 @@
       <%= @exam_group.name %>
     </div>
 
-    <div class="update_msg"><h4><%= in_place_editor_field :exam_group, :name %></h4><h4><span id="publish-notice-<%=@exam_group.id%>"><%= image_tag("loader.gif",:align => "absmiddle",
+    <div class="update_msg">
+      <h4>
+        <%= in_place_editor_field :exam_group, :name if user_allowed %>
+        <%= "<span>"+@exam_group.name+"</span>" unless user_allowed %>
+      </h4>
+
+      <h4><span id="publish-notice-<%=@exam_group.id%>"><%= image_tag("loader.gif",:align => "absmiddle",
             :border => 0,
             :id => "loader",
             :style =>"display: none;" ) %></span></h4></div>
@@ -77,8 +84,14 @@
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <% @exam = exam %>
               <td class="col-2"><%= link_to exam.subject.name, [@exam_group, exam] %></td>
-              <td class="col-1"><%= in_place_editor_field :exam, :maximum_marks,{},{:cols=>1} %></td>
-              <td class="col-1"><%= in_place_editor_field :exam, :minimum_marks,{},{:cols=>1} %></td>
+              <td class="col-1">
+                <%= in_place_editor_field :exam, :maximum_marks,{},{:cols=>1} if user_allowed%>
+                <%= "<span>"+exam.maximum_marks.to_s+"</span>" unless user_allowed %>
+              </td>
+              <td class="col-1">
+                <%= in_place_editor_field :exam, :minimum_marks,{},{:cols=>1} if user_allowed %>
+                <%= "<span>"+exam.minimum_marks.to_s+"</span>" unless user_allowed %>
+              </td>
               <td class="col-1">
                 <small><%= link_to t('edit_text'), edit_exam_group_exam_path(@exam_group, exam) %></small>
                 <small><%= link_to t('delete_text'), [@exam_group, exam], :method => 'delete', :confirm => t('delete_confirm_msg') %></small>
