--- a/app/views/exam/_exam_marks_form.erb
+++ b/app/views/exam/_exam_marks_form.erb
@@ -28,7 +28,7 @@
   <div class="label-field-pair">
     <%= f.label :exam_type, t('exam_type')%>
     <%= f.hidden_field :exam_type,:value=>@type %>
-    <div class="text-input-bg"><%= f.text_field :exam_type, :value=>@type,:disabled=>true %>
+    <div class="text-input-bg"><%= f.text_field :exam_type, :value=>@type=='Marks' ? t('marks') : t('marks_and_grades'),:disabled=>true %>
     </div><%= link_to "#{t('change_type')}", new_batch_exam_group_path(@batch,:ename=>@name),:class=>"type_link" %>
   </div>
   <div class="label-field-pair">
