sreeshanth(style issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1156 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/add_position.erb
+++ b/app/views/employee/add_position.erb
@@ -43,7 +43,7 @@
 
    <div class="label-field-pair">
       <label for="category_name"><%= "#{t('employee_category')}" %></label>
-      <div class="text-input-bg"><%= select :position, :employee_category_id, @categories.map {|s| [s.name, s.id]}, :prompt => "Select" %></div>
+      <div class="text-input-bg"><%= select :position, :employee_category_id, @categories.map {|s| [s.name, s.id]}, :prompt => "#{t('select')}" %></div>
     </div>
 
     <div class="label-checkbox-pair">
