--- a/app/views/archived_employee/_general.erb
+++ b/app/views/archived_employee/_general.erb
@@ -55,10 +55,10 @@
 
 
 <div class="profile_info_label_top2"><%= t('gender') %></div>
-<div class="profile_info_text_top2"> <%= @gender %> </div>
+<div class="profile_info_text_top2"> <%= t("#{@gender.downcase}") %> </div>
 
 <div class="profile_info_label_top"><%= t('status') %></div>
-<div class="profile_info_text_top"><%= @status %> </div>
+<div class="profile_info_text_top"><%= t("#{@status.downcase}") %> </div>
 
 
 
