--- a/app/views/archived_student/profile.erb
+++ b/app/views/archived_student/profile.erb
@@ -75,7 +75,7 @@
       <tr class="odd left"><td><%= t('admission_date') %></td><td class="right"><%= I18n.l(@archived_student.admission_date,:format=>"%d %b, %Y") unless @archived_student.admission_date.nil? %></td></tr>
       <tr class="even left"><td><%= t('date_of_birth') %></td><td class="right"><%= I18n.l(@archived_student.date_of_birth,:format=>"%d %b, %Y") unless @archived_student.date_of_birth.nil? %></td></tr>
       <tr class="odd left"><td><%= t('blood_group') %></td><td class="right"><%= @archived_student.blood_group %></td></tr>
-      <tr class="even left"><td><%= t('gender') %></td><td class="right"><%= @archived_student.gender_as_text %></td></tr>
+      <tr class="even left"><td><%= t('gender') %></td><td class="right"><%= t("#{@archived_student.gender_as_text.downcase}") %></td></tr>
       <tr class="odd left"><td><%= t('nationality') %></td><td class="right"><%= @archived_student.nationality.name unless @archived_student.nationality_id.nil? %></td></tr>
       <tr class="even left"><td><%= t('language') %></td><td class="right"><%= @archived_student.language %></td></tr>
       <tr class="odd left"><td><%= t('category') %></td><td class="right"><%= @archived_student.student_category.name unless @archived_student.student_category.nil? %></td></tr>
