added permission check for online exam link
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1160 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -69,12 +69,12 @@
     <!--online exam-->
 
     <% FedenaPlugin::ADDITIONAL_LINKS[:online_exam_index_link].each do |mod| %>
-  <%#  if permitted_to? :index,:online_exam %>
-      <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t("#{mod[:title]}")}",mod[:destination] %></div>
-        <div class="link-descr"><%= "#{t("#{mod[:description]}")}" %></div>
+      <%  if permitted_to? "#{mod[:destination][:action]}".to_sym,"#{mod[:destination][:controller]}".to_sym %>
+        <div class="link-box">
+          <div class="link-heading"><%= link_to "#{t("#{mod[:title]}")}",mod[:destination] %></div>
+          <div class="link-descr"><%= "#{t("#{mod[:description]}")}" %></div>
+        <% end %>
       <% end %>
-<%# end %>
     </div>
 
     <div class="extender"></div>
