[debanjan] feature for fedena 2.1.1
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1167 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_student/profile.erb
+++ b/app/views/archived_student/profile.erb
@@ -93,7 +93,7 @@
           <tr class="odd left">
             <td><%= field.name %></td>
             <td class="right">
-              <% detail = StudentAdditionalDetails.find_by_additional_field_id_and_student_id(field.id,@archived_student.former_id) %>
+              <% detail = @archived_student.additional_detail(field.id) %>
               <%= detail.additional_info unless detail.nil? %>
             <% end %>
           </td>
