feature => { added sub menus to main menus }
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1175 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -1,5 +1,5 @@
 <% this_user = User.find(session[:user_id]) if session[:user_id] %>
-<% arrow_dir = rtl? "◀" : "▶" %>
+<% arrow_dir = rtl? ? "◀" : "▶" %>
 <ul id="main-menu">
   <li><%= link_to t('dashboard_text'), :controller => "user", :action => "dashboard" %></li>
   <li><%= link_to t('students'), :controller => "student", :action => "index" \
