bug fixed in sub menu links
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1177 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -28,7 +28,7 @@
         <li><%= link_to "#{t('manage_subject')}", subjects_path %></li>
       <% end %>
       <% if permitted_to? :settings, :configuration %>
-        <li><%= link_to "#{t('general_settings')}", :action => "settings" %></li>
+        <li><%= link_to "#{t('general_settings')}", :controller => "configuration", :action => "settings" %></li>
       <% end %>
       <% if permitted_to? :settings, :configuration %>
         <li><%= link_to "#{t('add_admission_additional_detail')}", :controller=>"student", :action => "add_additional_details" %></li>
